--- a/index.html
+++ b/index.html
@@ -1071,26 +1071,35 @@
 
         </script>
         <style>
-            #container {
-/*                display: flex;
-                flex-flow: row nowrap;
-                align-items: flex-end;*/
+            .ccs-main-container {
+              background-color: blue;
+              width: 100%;
+              height: 50vh;
             }
+            .ccs-remote-containter {
+              background-color: red;
+              height: 100%;
+              position: relative;
+              width: 100%;
+              z-index: 1;
+            }
+            .ccs-local-container {
+              background-color: green;
+              height: 20%;
+              position: absolute;
+              width: 20%;
+              z-index: 999;
+            }
+           
             video {
                 background: #eee none repeat scroll 0 0;
                 border: 1px solid #aaa;
+                width: 100%;
+                height: 100%;
+                object-fit: all;
+
             }
-            .overlayWrapper {
-                position: relative;
-            }
-            .overlayWrapper .overlay {
-                position: absolute;
-                top: 0;
-                left: 5px;
-            }
-            p {
-                margin: 0.125em;
-            }
+
             small {
                 font-size: smaller;
             }
@@ -1100,23 +1109,23 @@
         <h1>
             <span>Chedd Conference System</span>
         </h1>
-        <div id="container">
-            <div class="overlayWrapper">
-                <!-- Might have to add controls="true" -->
-                <video id="remote-video" autoplay=""  playsinline="true" ½-½-:qwidth="640" height="480">
+        <div class="ccs-main-container">
+            <div class="ccs-remote-containter">
+                <div class="ccs-local-container">
+                    <video id="local-video" playsinline="true"  autoplay="">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+                <video id="remote-video" autoplay=""  playsinline="true">
                     Your browser does not support the video tag.
                 </video>
-                <p class="overlay">remote</p>
             </div>
-            <br>
-            <div class="overlayWrapper">
-                <video id="local-video" playsinline="true"  autoplay="" width="320" height="240">
-                    Your browser does not support the video tag.
-                </video>
-                <p class="overlay">local</p>
-            </div>
+
+            <!-- </div> -->
         </div>
-        <div id="controls">
+        <button id="start" style="background-color: green; color: white" onclick="start();">Call!</button>
+        <button disabled id="stop" style="background-color: red; color: white" onclick="stop();">Hang up</button>
+        <div id="controls" hidden="true">
             <button type=button id="pause" onclick="pause();" title="pause or resume local player">Pause/Resume</button>
             <button type=button id="mute" onclick="mute();" title="mute or unmute remote audio source">Mute/Unmute</button>
             <button type=button id="fullscreen" onclick="fullscreen();">Fullscreen</button>
@@ -1126,7 +1135,7 @@
             <legend><b>Remote peer options</b></legend>
             <div>
                 <span>Video:</span>
-                <label><input type="checkbox" onclick="remote_hw_vcodec_selection();"  id="remote_hw_vcodec" name="remote_hw_vcodec" value="remote_hw_vcodec" title="try to force the use of the hardware codec for both encoding and decoding if enabled and supported">force use of hardware codec for</label>
+                <label><input type="checkbox" onclick="remote_hw_vcodec_selection();" checked id="remote_hw_vcodec" name="remote_hw_vcodec" value="remote_hw_vcodec" title="try to force the use of the hardware codec for both encoding and decoding if enabled and supported">force use of hardware codec for</label>
                 <select id="remote_vformat" name="remote_vformat" onclick="remote_hw_vcodec_format_selection();" title="available resolutions and frame rates at the min., max. and start configured bitrates for adaptive streaming which will be scaled from the base 720p 30fps">
                     <option value="5">320x240 15 fps</option>
                     <option value="10">320x240 30 fps</option>
@@ -1148,10 +1157,9 @@
                     <option value="100">1920x1080 15 fps</option>
                     <option value="105">1920x1080 30 fps</option>
                 </select>
-                <p id="note1_"><small>NOTE: if your browser does not support the hardware codec yet, try Firefox with the codec plugin enabled or a recent version of Chrome.</small></p>
             </div>
         </fieldset>
-        <div>
+        <div hidden="true">
             <details id="record-detail">
                 <summary><b>Recorded Audio/Video stream</b></summary>
                 <div>
@@ -1163,7 +1171,6 @@
                     </div>
                 </div>
                 <div>
-                    <p><small>NOTE: some old Chrome version may generate corrupted video if the audio track is not present as well (use Firefox in this case)</small></p>
                     <button type=button id="discard" onclick="discard_recording();" title="discard recorded audio/video">Discard</button>
                     <button type=button id="download" onclick="download();" title="save recorded audio/video">Save as</button>
                 </div>
@@ -1184,19 +1191,8 @@
                 <label><input type="checkbox" onclick="singleselection('video_cast', 'cast_window');" id="cast_window" name="video_cast" value="screen">window</label>
                 <label><input type="checkbox" onclick="singleselection('video_cast', 'cast_application');" id="cast_application" name="video_cast" value="application">application</label>
             </div>
-            <div>
-                <p id="note1"><small>NOTE: camera and screen can be casted over HTTPS only in Chrome. For the screen the --enable-usermedia-screen-capturing flag must be set. window or application casting is only supported in Firefox 44 on.</small></p>
-                <p id="note2"><small>NOTE: except for camera, to enable screen, window or application casting open <i>about:config</i> URL
-                        and set <i>media.getusermedia.screensharing.enabled</i> to <i>true</i>
-                        and permanently add the current domain to the list in <i>media.getusermedia.screensharing.allowed_domains.</i></small>
-                </p>
-                <p id="note3"><small>NOTE: if you want to cast music, for better audio quality disable <i>echo-cancellation.</i></small></p>
-                <p id="note4"><small>NOTE: if you want to cast music, for better audio quality disable <i>echo-cancellation</i>,
-                        and <i>aec</i>, <i>noise-suppression</i>, <i>agc</i> in the browser configuration <i>(about:config).</i></small>
-                </p>
-            </div>
         </fieldset>
-        <div>
+        <div hidden="true">
             <details>
                 <summary><b>Data Channels</b></summary>
                 <fieldset id="datachannels" disabled>
@@ -1213,7 +1209,7 @@
                 </fieldset-->
             </details>
         </div><br>
-        <div id="commands">
+        <div id="commands" hidden="true">
             <details open>
                 <summary><b>Advanced options</b></summary>
                 <fieldset>
@@ -1227,8 +1223,7 @@
                     </select>
                 </fieldset>
             </details>
-            <button id="start" style="background-color: green; color: white" onclick="start();">Call!</button>
-            <button disabled id="stop" style="background-color: red; color: white" onclick="stop();">Hang up</button>
+
         </div><br>
         <a target="_top" href="/">home</a>&nbsp;<a href="/panel" target="_blank" title="change the image settings on-the-fly">control panel</a>
     </body>
